# liblightnvm

./: .buildinfo  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  create_target.c  genindex.html  get_devices.c  get_info.c  index.html  ioctl.h  liblightnvm.h  liblightnvm.map  mgmt.c  objects.inv  readme.md  readme.md.orig  remove_target.c  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/backends/: index.doctree  nvm_be_ioctl.doctree  nvm_be_lba.doctree  nvm_be_lbd.doctree  nvm_be_spdk.doctree  nvm_be_sysfs.doctree
.doctrees/background/: index.doctree
.doctrees/capi/: header.doctree  index.doctree  misc.doctree  nvm_addr.doctree  nvm_async.doctree  nvm_bbt.doctree  nvm_be.doctree  nvm_bounds.doctree  nvm_bp.doctree  nvm_buf.doctree  nvm_cmd.doctree  nvm_dev.doctree  nvm_geo.doctree  nvm_meta.doctree  nvm_mode.doctree  nvm_pmode.doctree  nvm_quirks.doctree  nvm_ret.doctree  nvm_sgl.doctree  nvm_vblk.doctree  nvm_ver.doctree
.doctrees/cli/: index.doctree  nvm_addr.doctree  nvm_bbt.doctree  nvm_cmd.doctree  nvm_dev.doctree  nvm_env.doctree  nvm_vblk.doctree
.doctrees/prereqs/: index.doctree  ocssd.doctree  os.doctree  tools.doctree
.doctrees/quick_start/: index.doctree
.doctrees/refs/: index.doctree
.doctrees/tutorial/: index.doctree
_sources/backends/: index.rst.txt
_sources/background/: index.rst.txt
_sources/capi/: header.rst.txt  index.rst.txt  nvm_addr.rst.txt  nvm_async.rst.txt  nvm_bbt.rst.txt  nvm_be.rst.txt  nvm_bounds.rst.txt  nvm_bp.rst.txt  nvm_buf.rst.txt  nvm_cmd.rst.txt  nvm_dev.rst.txt  nvm_mode.rst.txt  nvm_pmode.rst.txt  nvm_quirks.rst.txt  nvm_ret.rst.txt  nvm_vblk.rst.txt
_sources/cli/: index.rst.txt  nvm_bbt.rst.txt  nvm_cmd.rst.txt  nvm_env.rst.txt  nvm_vblk.rst.txt
_sources/prereqs/: index.rst.txt  ocssd.rst.txt  os.rst.txt  tools.rst.txt
_sources/quick_start/: index.rst.txt
_sources/refs/: index.rst.txt
backends/: index.html  nvm_be_ioctl.html  nvm_be_lba.html  nvm_be_lbd.html  nvm_be_spdk.html  nvm_be_sysfs.html
background/: index.html
capi/: header.html  index.html  misc.html  nvm_addr.html  nvm_async.html  nvm_bbt.html  nvm_be.html  nvm_bounds.html  nvm_bp.html  nvm_buf.html  nvm_cmd.html  nvm_dev.html  nvm_geo.html  nvm_meta.html  nvm_mode.html  nvm_pmode.html  nvm_quirks.html  nvm_ret.html  nvm_sgl.html  nvm_vblk.html  nvm_ver.html
ci/: DockerFile.ubuntu-12.04  DockerFile.ubuntu-14.04  DockerFile.ubuntu-15.04  DockerFile.ubuntu-15.10  DockerFile.ubuntu-16.04  DockerFile.ubuntu-17.04  DockerFile.ubuntu-18.04  bintray_descriptor.py
ci/doxy/: docs.cfg  lnvmdoxy_rsa.enc  main_page.dox
cli/: CMakeLists.txt  addr.c  bbt.c  cli_addr.c  cli_bbt.c  cli_cmd.c  cli_dev.c  cli_lba.c  cli_vblk.c  dblk.c  dev.c  index.html  lba.c  misc.c  nvm_addr.html  nvm_bbt.html  nvm_cli.c  nvm_cli.h  nvm_cmd.html  nvm_dev.html  nvm_env.html  nvm_vblk.html  sblk.c  util.c  vblk.c
cli/scripts/: README.rst  addr.py  addrs.py  cli_perf.out  cli_perf.sh  find_line.py  sblk.sh  scale.py  spdk.sh  stripe.py  vblk.sh
cmake/: Findcunit.cmake  Findudev.cmake  LibFindMacros.cmake  try_compile_spdk_nvme_ctrlr_cmd_iov_raw_with_md.c  use_c11.cmake  use_c99.cmake
deprecated/: nvm_atomic.h  nvm_beam.c  test_beam.c
doc/: conf.py  doxy.cfg  requirements.txt
doc/src/: api.rst  background.rst  c.rst  cli.rst  hw.c  (+9 more)
examples/: CMakeLists.txt  Makefile  addr.c  addr_read.c  addr_write.c  async-ex01-completion-wait.c  async-ex02-completion-poke.c  async-ex03-small-queue.c  async-ex12-horz.c  devinfo.c  dump.c  eblk.c  erase.c  gblk.c  get.c  info.c  lln.c  mark.c  mbad.c  nvmfs.c  pblk.c  put.c  read.c  sblk.c  sblk_ewr.sh  sync-ex01-ewr-prp.c  sync-ex01-ewr.c  sync-ex02-ewr-sgl.c  tgtinfo.c  vblk-ex01-ewr.c  vblk.c  vblock.c  vblock_max.c  vblock_pio_1.c  vblock_pio_n.c  vblock_reserve_n.c  vblock_rw.c  vblock_rw_all.c  vblock_rw_multilun.c  vblock_wr.c  (+1 more)
examples/dep/: exXX-async.c
examples/scripts/: epr_sblk.sh  ewr_all.sh  ewr_sblk.sh  ewr_vblk.sh  ewr_vblk_split.sh  ewr_vpage.sh  ewr_vpage_split.sh  vblk.sh
examples/src/: async-ex01-completion-wait.c  async-ex03-small-queue.c
include/: dflash_ioctl.h  liblightnvm.h  liblightnvm.map  liblightnvm_cli.h  liblightnvm_spec.h  liblightnvm_util.h  likely.h  nvm.h  nvm_async.h  nvm_be.h  nvm_be_ioctl.h  nvm_be_nocd.h  nvm_be_spdk.h  nvm_be_sysfs.h  nvm_beam.h  nvm_cmd.h  nvm_debug.h  nvm_dev.h  nvm_nvme.h  nvm_omp.h  nvm_sgl.h  nvm_spec.h  nvm_tgt.h  nvm_timer.h  nvm_util.h  nvm_utils.h  nvm_vblk.h
prereqs/: index.html  ocssd.html  os.html  tools.html
python/: lnvm.py  robin.py  scale.py  viz.py
quick_start/: index.html
refs/: index.html
src/: Makefile  dflash.c  dflash.h  flash_append.c  flash_beam.h  flash_file.h  flash_io.c  ioctl.h  liblightnvm.h  liblightnvm.map  mgmt.c  nvm_addr.c  nvm_async.c  nvm_bbt.c  nvm_be.c  nvm_be_ioctl.c  nvm_be_lba.c  nvm_be_lbd.c  nvm_be_nocd.c  nvm_be_spdk.c  nvm_be_sysfs.c  nvm_be_wioctl.c  nvm_beam.c  nvm_bounds.c  nvm_bp.c  nvm_buf.c  nvm_cli.c  nvm_cmd.c  nvm_dblk.c  nvm_dev.c  nvm_fpage.c  nvm_geo.c  nvm_lba.c  nvm_mgmt.c  nvm_misc.c  nvm_ret.c  nvm_sblk.c  nvm_sgl.c  nvm_spec.c  nvm_tgt.c  (+7 more)
tests/: CMakeLists.txt  Makefile  append_tests.c  dflash_tests.c  lib_test.c  raw_tests.c  runtests.sh  test_addr.c  test_addr_conv.c  test_addr_conv_s20.c  test_addr_io.c  test_addr_rio.c  test_bbt.c  test_beam.c  test_buf.c  test_cmd_copy.c  test_cmd_erase.c  test_cmd_ewr.c  test_cmd_ewr_s12.c  test_cmd_ewr_s20.c  test_cmd_ewr_scalar.c  test_cmd_ewr_vector.c  test_cmd_feat.c  test_cmd_rprt.c  test_cmd_rprt_ordr.c  test_cmd_wre_scalar.c  test_cmd_wre_vector.c  test_compliance.c  test_concur.c  test_dev.c  test_intf.c  test_io_s20.c  test_lba.c  test_mbad.c  test_mgmt.c  test_rules_read.c  test_rules_reset.c  test_rules_write.c  test_sgl.c  test_tgt.c  (+7 more)
tests/CuTest/: CuTest.c  CuTest.h
tests/dep/: test_addr_rio.c
tests/include/: test_rules.h  test_util.h
tests/scripts/: README.md  env.sh  nvm_test.py  test.sh
tutorial/: index.html
util/: atomic.h  debug.h
(+231 files in other folders)
